client/src/components/slider/Slider.css
.slider {
  margin-top: 10px;
  display: flex;
  flex-direction: column;
  /* overflow: hidden; */
}

.sliderTitles {
  font-family: "Lora", serif;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.sliderSubTitle {
  position: absolute;
  
  z-index: 998;
  font-size: 20px;
  cursor: pointer;
}

.sliderTitle {
  position: absolute;
  top: 10%;
  z-index: 998;
  font-size: 100px;
  cursor: pointer;
}

.sliderImages {
  margin-top: 60px;
  display: flex;
  transition: 1s ease-in;
}

.sliderImages > img {
  width: 100vw;
  height: 80vh;
  object-fit: cover;
}

